--- a/styles/Main.css
+++ b/styles/Main.css
@@ -367,7 +367,7 @@ p, h1 {
 }
 
 .footer--socialMedia {
-    display: flex;
+    text-align: center;
     flex-direction: row;
     margin: 0 25%;
 }
@@ -375,5 +375,5 @@ p, h1 {
 .footer--socialMedia-item {
     text-decoration: none;
     color: black;
-    flex: 1;
+    padding: 0 4%;
 }
