--- a/main.css
+++ b/main.css
@@ -29,12 +29,6 @@ html, body {
     margin: auto;
 }
 
-.bar{
-    display: block;
-    width: 100%;
-    height: 10px;
-}
-
 .links{
     display: flex;
     flex-direction: row;
@@ -96,4 +90,16 @@ hr {
     border-top: 1px solid #ccc;
     margin: 1em 0;
     padding: 0;
+}
+
+@media only screen and (max-width: 600px) {
+    .contact-item {
+        white-space: normal;
+    }
+    
+    .links{
+        min-width: 150px;
+        flex-direction: column;
+        justify-content: center;
+    }
 }
