--- a/main.css
+++ b/main.css
@@ -98,8 +98,13 @@ hr {
     }
     
     .links{
-        min-width: 150px;
+        min-width: 200px;
         flex-direction: column;
         justify-content: center;
     }
+    
+    #nametag {
+    padding-bottom: 20px;
+    text-align: center;
+}
 }
