--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ html, body {
     display: block;
     text-align: center;
     text-decoration: none;
-    padding-top: 60px;
+    margin-top: 60px;
     font-size: 1.2em;
 }
 
