--- a/main.css
+++ b/main.css
@@ -53,7 +53,7 @@ html, body {
     display: block;
     text-align: center;
     text-decoration: none;
-    margin-top: 60px;
+    margin-top: 20px;
     font-size: 1.2em;
 }
 
@@ -92,12 +92,11 @@ hr {
     padding: 0;
 }
 
-#cat {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    height: 100px;
-    width: 100px;
+#face {
+    display: block;
+    height: 200px;
+    width: 200px;
+    margin: auto;
 }
 
 @media only screen and (max-width: 600px) {
