--- a/main.css
+++ b/main.css
@@ -3,6 +3,16 @@
 	src: url('JosefinSans-Regular.ttf') format('truetype');
 }
 
+.font::selection {
+    background: #C7B299; /* WebKit/Blink Browsers */
+    color: #231f20;
+}
+.font::-moz-selection {
+    background: #C7B299; /* Gecko Browsers */
+    color: #231f20
+}
+
+
 html, body {
     margin: 0;
     height: 100%;
@@ -69,13 +79,54 @@ html, body {
     color: #8ad0bf;
 }
 
-.font::selection {
-    background: #C7B299; /* WebKit/Blink Browsers */
-    color: #231f20;
+#media {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    position: relative;
 }
-.font::-moz-selection {
-    background: #C7B299; /* Gecko Browsers */
-    color: #231f20
+
+.woodsprite-container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    position: absolute;
+    left: 0;
+}
+
+.woodsprite {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.woodsprite-head {
+    z-index: 2;
+    width: 35px;
+}
+
+#woodsprite-head1 {
+    margin-bottom: -10px;
+}
+
+#woodsprite-head2 {
+    margin-bottom: -4px;
+}
+
+#woodsprite-head3 {
+    margin-bottom: -10px;
+}
+
+.woodsprite-torso {
+    width: 23px;
+}
+
+.centre-banner{
+    display: block;
+}
+
+.hidden {
+    display: none;
 }
 
 a:hover {
