--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ html, body {
     position: relative;
 }
 
-.woodsprite-container {
+.kodama-container {
     display: flex;
     flex-direction: row;
     align-items: flex-end;
@@ -94,30 +94,30 @@ html, body {
     left: 0;
 }
 
-.woodsprite {
+.kodama {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.woodsprite-head {
+.kodama-head {
     z-index: 2;
     width: 35px;
 }
 
-#woodsprite-head1 {
+#kodama-head1 {
     margin-bottom: -10px;
 }
 
-#woodsprite-head2 {
+#kodama-head2 {
     margin-bottom: -4px;
 }
 
-#woodsprite-head3 {
+#kodama-head3 {
     margin-bottom: -10px;
 }
 
-.woodsprite-torso {
+.kodama-torso {
     width: 23px;
 }
 
