--- a/main.css
+++ b/main.css
@@ -105,16 +105,21 @@ html, body {
     width: 35px;
 }
 
+#wrapper-head1 {
+    margin-bottom: -13px;
+}
+
 #kodama-head1 {
-    margin-bottom: -10px;
+    bottom: 0;
 }
 
-#kodama-head2 {
-    margin-bottom: -4px;
+#wrapper-head2 {
+    margin-bottom: -8px;
 }
 
-#kodama-head3 {
-    margin-bottom: -10px;
+
+#wrapper-head3 {
+    margin-bottom: -11px;
 }
 
 .kodama-torso {
@@ -172,7 +177,46 @@ hr {
     }
     
     #nametag {
-    padding-bottom: 20px;
-    text-align: center;
+        padding-bottom: 20px;
+        text-align: center;
+    }
 }
+
+.rattling {
+    animation-name: RattleHeads;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes RattleHeads {
+    0% {
+        transform: rotate(0deg);
+        -webkit-transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+        transition: all 600ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+    55% {
+        transform: rotate(-90deg);
+    }
+    69% {
+        transform: rotate(55deg);
+    }
+    78% {
+        transform: rotate(-30deg);
+    }
+    85% {
+        transform: rotate(20deg);
+    }
+    91% {
+        transform: rotate(-15deg);
+    }
+    95% {
+        transform: rotate(10deg);
+    }
+    98% {
+        transform: rotate(-5deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
 }
