--- a/main.css
+++ b/main.css
@@ -92,6 +92,7 @@ html, body {
     align-items: flex-end;
     position: absolute;
     left: 0;
+    opacity: 1;
 }
 
 .kodama {
@@ -109,14 +110,9 @@ html, body {
     margin-bottom: -13px;
 }
 
-#kodama-head1 {
-    bottom: 0;
-}
-
 #wrapper-head2 {
     margin-bottom: -8px;
 }
-
 
 #wrapper-head3 {
     margin-bottom: -11px;
@@ -131,7 +127,15 @@ html, body {
 }
 
 .hidden {
-    display: none;
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s 2s, opacity 2s ease-in-out;
+}
+
+.visible {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 2s linear;
 }
 
 .noselect {
